# gms-mcp

./: .coverage  .cursorrules  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  RELEASING.md  pyproject.toml  pyrightconfig.json
.claude-plugin/: marketplace.json  plugin.json
.github/: README.md  evergreen_queue.json  next_tweet.txt  x-personality.md
.github/scripts/: generate_tweet.py  post_evergreen.py  post_tweet.py  report_evergreen_experiment.py  test_generate_tweet.py  test_post_evergreen.py  test_post_tweet.py  test_report_evergreen_experiment.py  tweet_context.py
.github/workflows/: ci.yml  publish.yml  x-evergreen-experiment.yml  x-post.yml  x-scheduled-post.yml
cli/docs/: CLI_HELPER_TOOLS.md  README.md
cli/reports/: TOOL_TEST_REPORT.md
cli/tests/python/: run_all_tests.py  test_agent_setup.py  test_asset_format_detection.py  test_asset_helper_additional_coverage.py  test_asset_helper_command_coverage.py  test_asset_texture_workflow_gap_coverage.py  test_assets_comprehensive.py  test_assets_texture_workflow_95.py  test_bridge_install_coverage.py  test_bridge_installer.py  test_bridge_one_shot_enable.py  test_bridge_server.py  test_command_behavior_coverage.py  test_command_modules_comprehensive.py  test_directory_validation_fixed.py  test_doctor_checks.py  (+40 more)
docs/plans/: 2025-01-25-claude-code-plugin-design.md  2025-01-25-claude-code-plugin-impl.md
documentation/: BRIDGE.md  CLIENT_SUPPORT_MATRIX.md  CODEX_WORKSPACE_MCP.md  CONFIGURATION.md
hooks/: session-start.sh
plugin/: hooks.json  mcp.json  plugin.json
scripts/: audit_codex_workspace_mcp.sh  generate_quality_reports.py  run_mcp_tool_smoke.py
skills/gms-mcp/: SKILL.md
src/gms_helpers/: __init__.py  agent_setup.py  asset_helper.py  assets.py  base_asset.py  bridge_installer.py  bridge_server.py  event_helper.py  gms.py  health.py  introspection.py  reference_scanner.py  results.py  room_instance_helper.py  run_session.py  runner.py  runtime_manager.py  sprite_frames.py  sprite_import.py  texture_groups.py  utils.py  workflow.py
src/gms_mcp/: POST_MORTEM_STDIO_DEADLOCKS.md  README.md  bootstrap_server.py  cli.py  client_registry.py  doctor.py  doctor_checks.py  gamemaker_mcp_server.py  install.py  project_detection.py  star_cta.py  update_notifier.py  update_status.py
(+38 files in other folders)
