[build-system]
requires = ["setuptools>=77", "setuptools-scm>=8", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gms-mcp"
dynamic = ["version"]
description = "GameMaker CLI + MCP server toolset"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  {name = "Callum Lory"},
  {name = "Ampersand Game Studios"},
]
keywords = ["gamemaker", "mcp", "cursor", "cli", "tools"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "mcp>=1.0.0",
  "fastmcp>=0.4.1",
  "tqdm>=4.66.0",
  "colorama>=0.4.6",
  "tomli>=2.0.1; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
  "pytest>=9.0.0",
  "pytest-cov>=6.0.0",
  "Pillow>=10.0.0",
  "ruff>=0.9.0",
  "pyright>=1.1.390",
  # Needed for type-checking on Python 3.11+ where the runtime uses tomllib.
  "tomli>=2.0.1",
]
import = [
  "Pillow>=10.0.0",
]

[project.urls]
Homepage = "https://github.com/Ampersand-Game-Studios/gms-mcp"
Repository = "https://github.com/Ampersand-Game-Studios/gms-mcp"
Issues = "https://github.com/Ampersand-Game-Studios/gms-mcp/issues"

[project.scripts]
gms = "gms_helpers.cli:main"
gms-mcp = "gms_mcp.cli:server"
gms-mcp-init = "gms_mcp.cli:init"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
gms_helpers = [
  "templates/**/*.gml",
  "test_invalid.json",
]

[tool.setuptools_scm]
fallback_version = "0.1.0"
version_scheme = "guess-next-dev"
local_scheme = "no-local-version"

[tool.pytest.ini_options]
testpaths = ["cli/tests/python"]
python_files = ["test_*.py"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 120
exclude = [".venv", "build", "dist"]

[tool.ruff.lint]
# Keep this lightweight: focus on undefined names/exports to catch real breakages early
# without forcing a style cleanup across the repo.
select = ["F821", "F822", "F823"]
